<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themeText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/displayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displayAsText"
        android:textColor="@color/colorSubTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="73dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="125dp">

        <View
            android:id="@+id/settings_struct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <ToggleButton
            android:id="@+id/listToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/settings_struct"
            android:text="@string/listToggleText"
            android:textOff="@string/listToggleText"
            android:textOn="@string/listToggleText" />

        <ToggleButton
            android:id="@+id/calendarToggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/settings_struct"
            android:layout_alignParentRight="true"
            android:text="@string/calendarToggleText"
            android:textOff="@string/calendarToggleText"
            android:textOn="@string/calendarToggleText" />

    </RelativeLayout>

    <TextView
        android:id="@+id/alertsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alerts"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="243dp" />

</android.support.constraint.ConstraintLayout>